# nes_emulator

./: .gitignore  .travis.yml  CMakeLists.txt  NOTES.md  README.md  doxygen_config
doc/: CS408-progress-presentation.pptx  init.md  outline.md
doc/report/: references.blg  references.tex  report.aux  report.bbl  report.bcf  report.blg  report.out  report.run.xml  report.tex  report.toc
src/: CMakeLists.txt
src/emulator/: CMakeLists.txt  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  library.cpp  library.h  mapper.cpp  mapper.h  mapper_nrom.cpp  mapper_nrom.h  memory.cpp  memory.h
src/emulator/Cpu/: Cpu.cpp  Cpu.h  Registers.cpp  Registers.h  cpu.cpp  cpu.h
src/emulator/Memory/: Memory.cpp  Memory.h  memory.cpp
src/emulator/Ppu/: ColorPalette.h  Ppu.cpp  Ppu.h  Renderer.h  VRam.cpp  VRam.h
src/emulator/Rom/: Cartridge.cpp  Cartridge.h  Mapper.cpp  Mapper.h  MapperNrom.cpp  MapperNrom.h  mapper.cpp  mapper.h  mapper_nrom.h
src/emulator/Utils/: Controller.cpp  Controller.h  Converters.cpp  Converters.h  EventSource.cpp  EventSource.h  Listener.cpp  Listener.h
test/: CMakeLists.txt
test/emulator_test/: CMakeLists.txt  test.cpp  testVRamAccess.cpp  test_cartridge.cpp  test_cpu.cpp  test_memory.cpp
test/emulator_test/helpers/: DummyRenderer.cpp  DummyRenderer.h  TestCpuHelpers.cpp  TestCpuHelpers.h  test_cartridge_helpers.cpp  test_cartridge_helpers.h
test/emulator_test/test_roms/shiru8bit/: example1.nes  example10.nes  example11.nes  example2.nes  example3.nes  example4.nes  example5.nes  example6.nes  example7.nes  example8.nes  example9.nes
(+352 files in other folders)
